ci: update ci system

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 # required metadata
-sonar.projectKey=chanllenge-study
+sonar.projectKey=FC-Study_Challenge-CI-Study
 sonar.projectName=chanllenge-study
 sonar.projectVersion=0.5
+sonar.organization=fc-study
 
 # path to source directories (required)
 sonar.sources=src
